fix(CDLP-44): fix actualite component from version mobile

--- a/src/app/components/actualite/actualite.component.css
+++ b/src/app/components/actualite/actualite.component.css
@@ -52,13 +52,48 @@ h6 {
 .container-grid {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 2rem;
 }
 
-.grid {
+.grid-games {
   width: 27rem;
+  justify-self: center;
+}
+
+.grid-games:last-child {
+  justify-self: end;
+}
+
+.grid-games:first-child {
+  justify-self: start;
+}
+
+.grid-cours {
+  width: 27rem;
+  justify-self: center;
+}
+
+.grid-cours:last-child {
+  justify-self: end;
+}
+
+.grid-cours:first-child {
+  justify-self: start;
+}
+
+.grid-bibliotheque {
+  width: 27rem;
+  justify-self: center;
+}
+
+.grid-bibliotheque:last-child {
+  justify-self: end;
+}
+
+.grid-bibliotheque:first-child {
+  justify-self: start;
 }
 
 .disabled-beta img {
